	* Added 'Sensor' connection type for XBee Series 2 modules
	* Implemented fundamental xbeeZB support - ZDO, etc will need to be implemented separately for now
	* Enhanced C++ usability
	* Added xbee_conTypeGet()
	* Added support for a larger range of standard baud rates on Linux and BSD
	* Added support for arbitrary baud rates on Linux and BSD (see config.mk to enable)

v3.0.8 - 24 Dec 2012
	* Fixed analog input values
	* Improved logging format for large data blocks
	* Added coloring for tx/rx events in the log to help with debugging
	* Network interface now exchanges the server's mode as well
	* I/O packets now have the extra metadata when running as a network client
	* Added xbee_dataSet() and xbee_dataGet() functions

v3.0.7 - 14 Jun 2012
	* Fixed initialization of frame mutexes
	* Abstracted serial I/O further for Win32 port
	* General tidy of codebase
	* Added HTML documentation
	* Renamed internal ll_* functions to xbee_ll_* to avoid conflicts when statically linking
	* Fixed incorrect xbee_conTx() and xbee_convTx() behavior (was adding a '\0' byte)
	* Fixed bug in AT tx & rx handlers
	* Added support for XBee Series 5 modules
	* Added xbee_conRxWait()
	* Re-designed C++ class and build C++ library - libxbeep.so

v3.0.6 - 25 Mar 2012
	* Added C++ class
	* Fixed Series 2 addressing issue
	* Enhanced address checking abilities of xbee_conNew()
	* Completely redesigned build system
	* Made a 'defconfig' for FreeBSD
	* Re-implemented threading functions
	* Fixed buggy network interface

v3.0.5 - 09 Mar 2012
	* Added FreeBSD support
	* Renamed xbee_logGet*() -> xbee_log*Get(), and xbee_logSet*() -> xbee_log*Set()
	* Provided C++ support
	* Added xbee_vsetup()
	* Added address validation
	* Added man page documentation
	* Added xbee_conPurge()
	* Added pseudo terminal application
	* Changed to API mode 1 by default (compile time option)
	* Added 'catch-all' connections
	* Changed 'Remote AT' timeouts to 750ms
	* Relicensed to LGPLv3

v3.0.4 - 29 Feb 2012