@@ -10,6 +10,7 @@ v3.0.9 - in progress
 	* Added xbee_conTypeGet()
 	* Added support for a larger range of standard baud rates on Linux and BSD
 	* Added support for arbitrary baud rates on Linux and BSD (see config.mk to enable)
+	* xbee_conTx() and relations now return XBEE_ETIMEOUT directly instead of via the retVal parameter
 
 v3.0.8 - 24 Dec 2012
 	* Fixed analog input values
